--- a/Shell/ShellWindow.xaml
+++ b/Shell/ShellWindow.xaml
@@ -15,16 +15,16 @@
                      d:DataContext="{d:DesignInstance shell:ShellWindowViewModel}">
     <DockPanel LastChildFill="True">
         <fluent:Ribbon regions:RegionManager.RegionName="{x:Static shared:RegionNames.ModuleList}"
-                           DockPanel.Dock="Top">
+                       DockPanel.Dock="Top">
             <fluent:Ribbon.Menu>
                 <fluent:Backstage IsEnabled="{Binding CanOpenMenu}"
                                   IsOpen="{Binding IsMenuOpen, Mode=TwoWay}">
                     <fluent:Backstage.Header>
                         <TextBlock Margin="3"
-                                       Text="Основное Меню" />
+                                   Text="Меню" />
                     </fluent:Backstage.Header>
                     <fluent:BackstageTabControl
-                            regions:RegionManager.RegionName="{x:Static shared:RegionNames.MainMenu}" />
+                        regions:RegionManager.RegionName="{x:Static shared:RegionNames.MainMenu}" />
                 </fluent:Backstage>
             </fluent:Ribbon.Menu>
         </fluent:Ribbon>
@@ -34,11 +34,11 @@
                             VerticalAlignment="Stretch" />
 
             <ContentControl Content="{Binding BusyMediator}"
-                        HorizontalAlignment="Stretch"
-                        VerticalAlignment="Stretch" />
-            <ContentControl Content="{Binding CriticalFailureMediator}"
-                        HorizontalAlignment="Stretch"
-                        VerticalAlignment="Stretch" />
+                            HorizontalAlignment="Stretch"
+                            VerticalAlignment="Stretch" />
+            <ContentControl Content="{Binding FailureMediator}"
+                            HorizontalAlignment="Stretch"
+                            VerticalAlignment="Stretch" />
         </Grid>
     </DockPanel>
 </fluent:RibbonWindow>
