--- a/PatientRecordsModule/Views/NewVisitCreating.xaml
+++ b/PatientRecordsModule/Views/NewVisitCreating.xaml
@@ -73,7 +73,7 @@
         <ContentControl Content="{Binding BusyMediator}"
                         HorizontalAlignment="Stretch"
                         VerticalAlignment="Stretch" />
-        <ContentControl Content="{Binding CriticalFailureMediator}"
+        <ContentControl Content="{Binding FailureMediator}"
                         HorizontalAlignment="Stretch"
                         VerticalAlignment="Stretch" />
     </Grid>
