--- a/PatientInfoModule/Views/PatientContracts.xaml
+++ b/PatientInfoModule/Views/PatientContracts.xaml
@@ -15,8 +15,7 @@
              xmlns:popup="clr-namespace:Core.Wpf.PopupWindowActionAware;assembly=Core.Wpf"
              mc:Ignorable="d"
              d:DesignHeight="600"
-             d:DesignWidth="1024"
-             d:DataContext="{d:DesignInstance viewModels:PatientContractsViewModel}">
+             d:DesignWidth="1024" d:DataContext="{d:DesignInstance viewModels:PatientContractsViewModel}">
     
     <UserControl.Resources>
         <DataTemplate x:Key="NotificationWindowTemplate">
@@ -62,9 +61,9 @@
         </DataTemplate>
 
         <DataTemplate x:Key="SectionDataTemplate">
-            <TextBlock DockPanel.Dock="Top" Text="{Binding SectionName}" 
-                        HorizontalAlignment="{Binding SectionAlignment}"
-                        Background="{Binding SectionBackColor}"/>
+            <DockPanel LastChildFill="True">
+                <Label Content="{Binding SectionName}" HorizontalAlignment="{Binding SectionAlignment}" FontWeight="Medium" Foreground="Green"/>
+            </DockPanel>
         </DataTemplate>
         <DataTemplate x:Key="ContractItemDataTemplate">
             <Grid>
@@ -204,23 +203,26 @@
                         </StackPanel>
                         <TextBlock Grid.Row="2" Grid.Column="0" Text="Источник финансирования" Margin="2"/>
                         <ComboBox Grid.Row="2" Grid.Column="1" Margin="2" HorizontalAlignment="Stretch"
-                ItemsSource="{Binding FinancingSources}" 
-                DisplayMemberPath="Field" 
-                SelectedValuePath="Value" 
-                SelectedValue="{Binding SelectedFinancingSourceId}"/>
+                            ItemsSource="{Binding FinancingSources}" 
+                            DisplayMemberPath="Field" 
+                            SelectedValuePath="Value" 
+                            SelectedValue="{Binding SelectedFinancingSourceId, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
+                                                    Validation.ErrorTemplate="{DynamicResource ValidationTemplateRightIcon}"/>
                         <TextBlock Grid.Row="3" Grid.Column="0" Text="Ответственный за договор" Margin="2"/>
                         <ComboBox Grid.Row="3" Grid.Column="1" HorizontalAlignment="Stretch" Margin="2"
-                ItemsSource="{Binding Registrators}" 
-                DisplayMemberPath="Field" 
-                SelectedValuePath="Value" 
-                SelectedValue="{Binding SelectedRegistratorId}"/>
+                            ItemsSource="{Binding Registrators}" 
+                            DisplayMemberPath="Field" 
+                            SelectedValuePath="Value" 
+                            SelectedValue="{Binding SelectedRegistratorId, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
+                                                    Validation.ErrorTemplate="{DynamicResource ValidationTemplateRightIcon}"/>
 
                         <TextBlock Grid.Row="4" Grid.Column="0" Text="Заказчик" Margin="2"/>
                         <wpf:AutoCompleteTextBox Grid.Row="4" Grid.Column="1" Margin="2" HorizontalAlignment="Stretch" Height="23"
                                 Watermark="Введите Ф.И.О. заказчика для поиска..."
                                 DisplayMember="FullName"
                                 ItemTemplate="{StaticResource PersonAutoCompleteTemplate}"
-                                SelectedItem="{Binding SelectedClient, Mode=TwoWay}"
+                                SelectedItem="{Binding SelectedClient, Mode=TwoWay, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
+                                                 Validation.ErrorTemplate="{DynamicResource ValidationTemplateRightIcon}"
                                 IconPlacement="Left"
                                 IconVisibility="Visible"
                                 Provider="{Binding PersonSuggestionProvider}"
@@ -237,24 +239,29 @@
                                    Text="{Binding Consumer}" IsReadOnly="True"/>                                
                         <TextBlock Grid.Row="6" Grid.Column="0" Text="Метод оплаты" Margin="2"/>
                         <ComboBox Grid.Row="6" Grid.Column="1" HorizontalAlignment="Stretch" Margin="2"
-            ItemsSource="{Binding PaymentTypes}" 
-            DisplayMemberPath="Field" 
-            SelectedValuePath="Value" 
-            SelectedValue="{Binding SelectedPaymentTypeId}"/>
+                            ItemsSource="{Binding PaymentTypes}" 
+                            DisplayMemberPath="Field" 
+                            SelectedValuePath="Value" 
+                            SelectedValue="{Binding SelectedPaymentTypeId, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
+                                                    Validation.ErrorTemplate="{DynamicResource ValidationTemplateRightIcon}"/>
                         <TextBlock Grid.Row="7" Grid.Column="0" Text="№ транзакции" Margin="2" Visibility="{Binding IsCashless, Converter={x:Static converters:BoolToVisibilityConverter.Instance}}"/>
                         <TextBox Grid.Row="7" Grid.Column="1" Width="300" Height="23" HorizontalAlignment="Left" Margin="2" 
-                Text="{Binding TransationNumber, Mode=TwoWay}" Visibility="{Binding IsCashless, Converter={x:Static converters:BoolToVisibilityConverter.Instance}}"/>
+                            Text="{Binding TransationNumber, Mode=TwoWay, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
+                            Validation.ErrorTemplate="{DynamicResource ValidationTemplateRightIcon}"
+                            Visibility="{Binding IsCashless, Converter={x:Static converters:BoolToVisibilityConverter.Instance}}"/>
                         <TextBlock Grid.Row="8" Grid.Column="0" Text="Дата транзакции" Margin="2" Visibility="{Binding IsCashless, Converter={x:Static converters:BoolToVisibilityConverter.Instance}}"/>
                         <TextBox Grid.Row="8" Grid.Column="1" Width="300" Height="23" HorizontalAlignment="Left" Margin="2"
-                Text="{Binding TransationDate, Mode=TwoWay}" Visibility="{Binding IsCashless, Converter={x:Static converters:BoolToVisibilityConverter.Instance}}"/>
+                            Text="{Binding TransationDate, Mode=TwoWay, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
+                            Validation.ErrorTemplate="{DynamicResource ValidationTemplateRightIcon}"    
+                            Visibility="{Binding IsCashless, Converter={x:Static converters:BoolToVisibilityConverter.Instance}}"/>
 
                         <GroupBox Grid.Row="9" Grid.Column="0" Grid.ColumnSpan="2">
                             <StackPanel Orientation="Vertical" >
                                 <TextBlock Text="Услуги по договору" FontWeight="Bold"></TextBlock>
                                 <RadioButton Content="Назначенные услуги" IsChecked="{Binding IsAssignRecordsChecked, Mode=TwoWay}" Margin="2"/>
                                 <ListView ItemsSource="{Binding Assignments}" SelectedItem="{Binding SelectedAssignment, Mode=TwoWay}"
-                        Visibility="{Binding IsAssignRecordsChecked, Converter={x:Static converters:BoolToVisibilityConverter.Instance}}"
-                        Margin="2" MaxHeight="200">
+                                    Visibility="{Binding IsAssignRecordsChecked, Converter={x:Static converters:BoolToVisibilityConverter.Instance}}"
+                                    Margin="2" MaxHeight="200">
                                     <ListView.View>
                                         <GridView>
                                             <GridView.Columns>
@@ -274,7 +281,7 @@
                                 </ListView>
                                 <RadioButton Content="Добавить услугу из номенклатуры" IsChecked="{Binding IsNewRecordChecked, Mode=TwoWay}" Margin="2"/>
                                 <StackPanel Orientation="Vertical" 
-                        Visibility="{Binding IsNewRecordChecked, Converter={x:Static converters:BoolToVisibilityConverter.Instance}}">
+                                    Visibility="{Binding IsNewRecordChecked, Converter={x:Static converters:BoolToVisibilityConverter.Instance}}">
                                     <wpf:AutoCompleteTextBox Margin="2"
                                     Watermark="Введите наименование услуги для поиска..."
                                     DisplayMember="Name"
@@ -322,8 +329,9 @@
                         </Border>
 
                         <ListView Grid.Row="11" Grid.Column="0" Grid.ColumnSpan="2" Margin="3,0,3,2" MinHeight="100" BorderThickness="1,0,1,1" BorderBrush="Black"
-                        ItemsSource="{Binding ContractItems}" 
+                        ItemsSource="{Binding ContractItems, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
                         SelectedItem="{Binding SelectedContractItem, Mode=TwoWay}"
+                        Validation.ErrorTemplate="{DynamicResource ValidationTemplateRightIcon}"  
                         ItemTemplateSelector="{StaticResource itemTemplateSelector}">
                             <ListView.ItemContainerStyle>
                                 <Style TargetType="ListViewItem">
@@ -333,9 +341,7 @@
                         </ListView>
                     </Grid>
                 </Grid>   
-            </Border>
-
-            
+            </Border>            
         </Grid>
         <ContentControl Content="{Binding BusyMediator}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
         <ContentControl Content="{Binding FailureMediator}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
